[gd_scene load_steps=18 format=3 uid="uid://bqbqfvgku6rh2"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_rd26e"]
[ext_resource type="Script" path="res://Scripts/Timer.gd" id="1_wqxjg"]
[ext_resource type="LabelSettings" uid="uid://dr2jd0qtotfpn" path="res://textAlert.tres" id="3_6ixe4"]
[ext_resource type="Texture2D" uid="uid://c5bmu0x843mn5" path="res://button_normal.png" id="3_hk8wc"]
[ext_resource type="Texture2D" uid="uid://l6j37fd3x80w" path="res://tile.png" id="4_krpu0"]
[ext_resource type="Texture2D" uid="uid://cnc6tf5jd7vbw" path="res://button_clicked.png" id="4_uposl"]
[ext_resource type="Texture2D" uid="uid://nprsm5pjg4e6" path="res://void.png" id="5_1lv8d"]
[ext_resource type="Texture2D" uid="uid://dt4vlerhq8v3s" path="res://button_hover.png" id="5_welup"]
[ext_resource type="Texture2D" uid="uid://bbfnofdyemmm7" path="res://button_disable.png" id="6_nakjl"]
[ext_resource type="LabelSettings" uid="uid://e3sbse35x8yk" path="res://menu_principal.tres" id="7_am5nq"]

[sub_resource type="LabelSettings" id="LabelSettings_td0rk"]
font_size = 48
outline_size = 6
outline_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_color = Color(0.301961, 0.301961, 0.301961, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bnoay"]
font_size = 32
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_color = Color(0.5, 0.5, 0.5, 1)

[sub_resource type="LabelSettings" id="LabelSettings_anv4v"]
line_spacing = 0.0
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7ygoi"]
resource_name = "floor"
texture = ExtResource("4_krpu0")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4y1y0"]
resource_name = "void"
texture = ExtResource("5_1lv8d")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, -32, -32, -32, 32, 32, 32)

[sub_resource type="TileSet" id="TileSet_fh65j"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_7ygoi")
sources/1 = SubResource("TileSetAtlasSource_4y1y0")

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_au0mf"]
properties/0/path = NodePath(".:ranking_score")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("CanvasLayer/UI/Log:text")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="Game" type="Control" node_paths=PackedStringArray("tilemap", "menu_create_name", "nextLabel", "ranking_view", "server_ip", "lista_jogadores", "log")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rd26e")
tilemap = NodePath("TileMap")
menu_create_name = NodePath("CanvasLayer/Menu/VBoxContainer/Nickname")
nextLabel = NodePath("CanvasLayer/UI/NextBlock/ColorRect/Label")
ranking_view = NodePath("CanvasLayer/GameResult/VBoxContainer/ScrollContainer/VBoxContainer")
server_ip = NodePath("CanvasLayer/Menu/LAN/VBoxContainer/IP")
lista_jogadores = NodePath("CanvasLayer/Menu/LAN/VBoxContainer/ScrollContainer/ItemList")
log = NodePath("CanvasLayer/Debug/Log")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NextBlock" type="ColorRect" parent="CanvasLayer/UI"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/UI/NextBlock"]
custom_minimum_size = Vector2(72, 72)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -36.0
offset_right = 36.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/UI/NextBlock/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "99"
label_settings = SubResource("LabelSettings_td0rk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameTimer" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.5
offset_right = 40.5
offset_bottom = 48.0
grow_horizontal = 2
text = "99:99"
label_settings = SubResource("LabelSettings_bnoay")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("1_wqxjg")

[node name="GameResult" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/GameResult"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.313726)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameResult"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/GameResult/VBoxContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameResult/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ReturMenu" type="TextureButton" parent="CanvasLayer/GameResult/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_hk8wc")
texture_pressed = ExtResource("4_uposl")
texture_hover = ExtResource("5_welup")
texture_disabled = ExtResource("6_nakjl")
stretch_mode = 3

[node name="Label" type="Label" parent="CanvasLayer/GameResult/VBoxContainer/ReturMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Menu"
label_settings = ExtResource("7_am5nq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -20.0
offset_right = 33.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Nickname" type="LineEdit" parent="CanvasLayer/Menu/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
placeholder_text = "Nickname"
max_length = 32

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 1

[node name="SinglePlayer" type="TextureButton" parent="CanvasLayer/Menu/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("3_hk8wc")
texture_pressed = ExtResource("4_uposl")
texture_hover = ExtResource("5_welup")
texture_disabled = ExtResource("6_nakjl")

[node name="Label" type="Label" parent="CanvasLayer/Menu/VBoxContainer/HBoxContainer/SinglePlayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Single Player"
label_settings = ExtResource("7_am5nq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Multiplayer" type="TextureButton" parent="CanvasLayer/Menu/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("3_hk8wc")
texture_pressed = ExtResource("4_uposl")
texture_hover = ExtResource("5_welup")
texture_disabled = ExtResource("6_nakjl")

[node name="Label" type="Label" parent="CanvasLayer/Menu/VBoxContainer/HBoxContainer/Multiplayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Multi Player"
label_settings = ExtResource("7_am5nq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="CanvasLayer/Menu/VBoxContainer"]
layout_mode = 2
label_settings = ExtResource("3_6ixe4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LAN" type="Control" parent="CanvasLayer/Menu"]
visible = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Menu/LAN"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="IPConnected" type="Label" parent="CanvasLayer/Menu/LAN/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Menu/LAN/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4

[node name="ItemList" type="ItemList" parent="CanvasLayer/Menu/LAN/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="IP" type="LineEdit" parent="CanvasLayer/Menu/LAN/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Ip para se conectar"

[node name="Iniciar" type="TextureButton" parent="CanvasLayer/Menu/LAN/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_hk8wc")
texture_pressed = ExtResource("4_uposl")
texture_hover = ExtResource("5_welup")
texture_disabled = ExtResource("6_nakjl")
stretch_mode = 3

[node name="Label" type="Label" parent="CanvasLayer/Menu/LAN/VBoxContainer/Iniciar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Começar partida"
label_settings = ExtResource("7_am5nq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Host" type="TextureButton" parent="CanvasLayer/Menu/LAN/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_hk8wc")
texture_pressed = ExtResource("4_uposl")
texture_hover = ExtResource("5_welup")
texture_disabled = ExtResource("6_nakjl")
stretch_mode = 3

[node name="Label" type="Label" parent="CanvasLayer/Menu/LAN/VBoxContainer/Host"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Host"
label_settings = ExtResource("7_am5nq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Connect" type="TextureButton" parent="CanvasLayer/Menu/LAN/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_hk8wc")
texture_pressed = ExtResource("4_uposl")
texture_hover = ExtResource("5_welup")
texture_disabled = ExtResource("6_nakjl")
stretch_mode = 3

[node name="Label" type="Label" parent="CanvasLayer/Menu/LAN/VBoxContainer/Connect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Conectar"
label_settings = ExtResource("7_am5nq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Desconectar" type="TextureButton" parent="CanvasLayer/Menu/LAN/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_hk8wc")
texture_pressed = ExtResource("4_uposl")
texture_hover = ExtResource("5_welup")
texture_disabled = ExtResource("6_nakjl")
stretch_mode = 3

[node name="Label" type="Label" parent="CanvasLayer/Menu/LAN/VBoxContainer/Desconectar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Desconectar"
label_settings = ExtResource("7_am5nq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Voltar" type="TextureButton" parent="CanvasLayer/Menu/LAN/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
texture_normal = ExtResource("3_hk8wc")
texture_pressed = ExtResource("4_uposl")
texture_hover = ExtResource("5_welup")
texture_disabled = ExtResource("6_nakjl")

[node name="Label" type="Label" parent="CanvasLayer/Menu/LAN/VBoxContainer/Voltar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Menu Inicial"
label_settings = ExtResource("7_am5nq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="CanvasLayer/Menu/LAN/VBoxContainer"]
layout_mode = 2
label_settings = ExtResource("3_6ixe4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="CanvasLayer/Menu"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="CanvasLayer/Menu/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.5
offset_top = -11.5
offset_right = 44.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Desenvolvido por Samuel ( também conhecido como Naosteveaki)"
label_settings = SubResource("LabelSettings_anv4v")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Menu/Control/Label"]
show_behind_parent = true
custom_minimum_size = Vector2(450, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.501961)

[node name="Debug" type="Control" parent="CanvasLayer"]
visible = false
custom_minimum_size = Vector2(300, 200)
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_right = 200.0
grow_vertical = 0
mouse_filter = 1

[node name="Log" type="RichTextLabel" parent="CanvasLayer/Debug"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TileMap" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_fh65j")
rendering_quadrant_size = 64

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_au0mf")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/entity.tscn")
spawn_path = NodePath("../TileMap")

[connection signal="game_time_end" from="CanvasLayer/UI/GameTimer" to="." method="game_time_end"]
[connection signal="pressed" from="CanvasLayer/GameResult/VBoxContainer/ReturMenu" to="." method="_on_retur_menu_pressed"]
[connection signal="button_up" from="CanvasLayer/Menu/VBoxContainer/HBoxContainer/SinglePlayer" to="." method="selectSPMode"]
[connection signal="button_up" from="CanvasLayer/Menu/VBoxContainer/HBoxContainer/Multiplayer" to="." method="selectMPMode"]
[connection signal="visibility_changed" from="CanvasLayer/Menu/LAN" to="." method="_on_lan_visibility_changed"]
[connection signal="pressed" from="CanvasLayer/Menu/LAN/VBoxContainer/Iniciar" to="." method="_on_iniciar_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/LAN/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/LAN/VBoxContainer/Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/LAN/VBoxContainer/Desconectar" to="." method="_on_desconectar_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/LAN/VBoxContainer/Voltar" to="." method="_on_voltar_pressed"]
